C2: assert(main_cmp->in(2)->Opcode() == Op_Opaque1) failed: main loop has no opaque node?

XMLWordPrintable

    • b27
    • Verified

      Starts to fail after JDK-8269820.

      Reproduce:
      Run compiler/c2/TestFoldCompares.java with -XX:+UseParallelGC

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/christian/jdk/open/src/hotspot/share/opto/loopTransform.cpp:3581), pid=806142, tid=806151
      # assert(main_cmp->in(2)->Opcode() == Op_Opaque1) failed: main loop has no opaque node?
      #
      # JRE version: Java(TM) SE Runtime Environment (20.0) (slowdebug build 20-internal-2022-12-07-1633265.christian...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 20-internal-2022-12-07-1633265.christian..., mixed mode, tiered, compressed oops, compressed class ptrs, parallel gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xf569ca] IdealLoopTree::remove_main_post_loops(CountedLoopNode*, PhaseIdealLoop*)+0x1ea

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: